--- a/Course Projects/6.4 Motivation Meme Project/style.css
+++ b/Course Projects/6.4 Motivation Meme Project/style.css
@@ -1,30 +1,22 @@
-html {
+body {
   background-color: black;
-  text-align: center;
 }
-h1,
-p {
-  color: white;
-  text-align: center;
-}
+
 img {
   border: white 5px solid;
-  width: 100%;
-  margin-top: 10px;
+  width: 95%;
 }
 
 div {
   width: 50%;
   margin-left: 25%;
   margin-top: 10%;
-  /* border: white 10px solid; */
-}
-
-p {
-  margin-bottom: 10px;
+  text-align: center;
+  color: white;
+  font-family: "Libre Baskerville", serif;
 }
 
 h1 {
-  font-family: Libre, Baskerville;
   text-transform: uppercase;
+  font-weight: 500;
 }
